# ofwhich

./: LICENSE  README.md  pyproject.toml
examples/: example01.py
src/ofwhich/: __init__.py
